[gd_scene load_steps=5 format=3 uid="uid://cqey1rgvj0e2j"]

[ext_resource type="Script" path="res://widgets/calendar/calendar.gd" id="1_lkxak"]
[ext_resource type="PackedScene" uid="uid://brpavu0ocrgcq" path="res://widgets/top_navigation_bar/top_navigation_bar.tscn" id="1_xcq41"]
[ext_resource type="Texture2D" uid="uid://p5kfleaids3w" path="res://assets/icons/left-arrow.png" id="2_0t6bo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1fvyw"]

[node name="Calendar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lkxak")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 252.0
grow_horizontal = 2

[node name="TopNavigationBar" parent="VBoxContainer" instance=ExtResource("1_xcq41")]
unique_name_in_owner = true
layout_mode = 2
title = "Workout Calendar"

[node name="BigCalendarBox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MonthSelectionBox" type="MarginContainer" parent="VBoxContainer/BigCalendarBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BigCalendarBox/MonthSelectionBox"]
layout_mode = 2

[node name="previousMonth" type="TextureRect" parent="VBoxContainer/BigCalendarBox/MonthSelectionBox/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_0t6bo")
expand_mode = 1

[node name="previousMonthButton" type="Button" parent="VBoxContainer/BigCalendarBox/MonthSelectionBox/HBoxContainer/previousMonth"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/hover = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1fvyw")

[node name="MonthYearLabel" type="Label" parent="VBoxContainer/BigCalendarBox/MonthSelectionBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "September 2024"

[node name="nextMonth" type="TextureRect" parent="VBoxContainer/BigCalendarBox/MonthSelectionBox/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_0t6bo")
expand_mode = 1
flip_h = true

[node name="nextMonthButton" type="Button" parent="VBoxContainer/BigCalendarBox/MonthSelectionBox/HBoxContainer/nextMonth"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/hover = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1fvyw")

[node name="WeekSelection" type="HBoxContainer" parent="VBoxContainer/BigCalendarBox"]
layout_mode = 2

[node name="previousWeek" type="TextureRect" parent="VBoxContainer/BigCalendarBox/WeekSelection"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_0t6bo")
expand_mode = 1

[node name="previousWeekButton" type="Button" parent="VBoxContainer/BigCalendarBox/WeekSelection/previousWeek"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/hover = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1fvyw")

[node name="ColumnsBox" type="HBoxContainer" parent="VBoxContainer/BigCalendarBox/WeekSelection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/BigCalendarBox/WeekSelection/ColumnsBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/BigCalendarBox/WeekSelection/ColumnsBox/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Mon"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/BigCalendarBox/WeekSelection/ColumnsBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/BigCalendarBox/WeekSelection/ColumnsBox/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Tue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/BigCalendarBox/WeekSelection/ColumnsBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/BigCalendarBox/WeekSelection/ColumnsBox/VBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Wed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/BigCalendarBox/WeekSelection/ColumnsBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/BigCalendarBox/WeekSelection/ColumnsBox/VBoxContainer4"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Thu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer5" type="VBoxContainer" parent="VBoxContainer/BigCalendarBox/WeekSelection/ColumnsBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/BigCalendarBox/WeekSelection/ColumnsBox/VBoxContainer5"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Fri"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer6" type="VBoxContainer" parent="VBoxContainer/BigCalendarBox/WeekSelection/ColumnsBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/BigCalendarBox/WeekSelection/ColumnsBox/VBoxContainer6"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Sat"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer7" type="VBoxContainer" parent="VBoxContainer/BigCalendarBox/WeekSelection/ColumnsBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/BigCalendarBox/WeekSelection/ColumnsBox/VBoxContainer7"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Sun"
horizontal_alignment = 1
vertical_alignment = 1

[node name="nextWeek" type="TextureRect" parent="VBoxContainer/BigCalendarBox/WeekSelection"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_0t6bo")
expand_mode = 1
flip_h = true

[node name="nextWeekButton" type="Button" parent="VBoxContainer/BigCalendarBox/WeekSelection/nextWeek"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/hover = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_1fvyw")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1fvyw")

[connection signal="pressed" from="VBoxContainer/BigCalendarBox/MonthSelectionBox/HBoxContainer/previousMonth/previousMonthButton" to="." method="_on_previous_month_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BigCalendarBox/MonthSelectionBox/HBoxContainer/nextMonth/nextMonthButton" to="." method="_on_next_month_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BigCalendarBox/WeekSelection/previousWeek/previousWeekButton" to="." method="_on_previous_week_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BigCalendarBox/WeekSelection/nextWeek/nextWeekButton" to="." method="_on_next_week_button_pressed"]
